src/main/java/com/example/cars/error/AccessDeniedException.java
package com.example.cars.error;

public class AccessDeniedException extends RuntimeException {
    public AccessDeniedException(String message) {
        super(message);
    }
}
